force-app/main/default/objects/Order_Line_Item__c/fields/Item_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Sub_Category__c</fullName>
    <label>Item Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>