force-app/main/default/objects/Order_Line_Item__c/fields/Item_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Item_Subtotal__c</fullName>
    <label>Item Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>