force-app/main/default/objects/Order_Line_Item__c/fields/Item_Vehicle_Group__c.field-meta.xml
<CustomField>
    <fullName>Item_Vehicle_Group__c</fullName>
    <label>Item Vehicle Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>