force-app/main/default/objects/Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Item_Vehicle_Number__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Item_SKU__c</columns>
    <columns>Item_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>